Fix: Improve dark mode sub-menu hover contrast

--- a/css/style.css
+++ b/css/style.css
@@ -132,7 +132,7 @@ body{
 .sub {width: 150px; font-size: 14px;
  position: absolute; z-index: 5;}
 .sub a {display: block;}
-.sub a:hover {background-color: var(--header-border-color); color: var(--menu-hover-text-color);} 
+.sub a:hover {background-color: var(--menu-hover-bg-color); color: var(--menu-hover-text-color);} 
 .sub_bg {width: 100%; height: 170px; background-color: var(--sub-bg-color);
  position: absolute; z-index: 4; left: 0; top: 100px;}
 
